# HandySearch

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dictionary.cpp  Exceptions.h  HandySearch.h  HandySearch.pro  HandySearch.rc  HashMap.h  Html.cpp  Html.h  Index.h  InvertedList.cpp  InvertedList.h  List.h  LoadUI.h  LocalInvertedList.cpp  LocalInvertedList.h  README.md  WordSegmenter.h  handy_search.pro  handy_search.qrc  handysearch.cpp  stdafx.h
.github/workflows/: ccpp.yml  installer.qs  main.yml
HandySearch/: BloomFilter.cpp  BloomFilter.h  Dictionary.h  Exceptions.h  HandySearch.pro  Html.cpp  Html.h  Index.cpp  List.h  LocalInvertedList.cpp  LocalInvertedList.h  WordSegmenter.cpp  handysearch.h  main.cpp  stdafx.h
app/: CMakeLists.txt  app.pro  app.qrc  main.cpp
app/forms/: handy_search.ui  load_ui.ui
app/src/: handy_search.cpp  handy_search.h  load_ui.cpp  load_ui.h  load_ui.ui  main.cpp
assets/: dictionary.txt
core/: CMakeLists.txt  bloom_filter.cpp  bloom_filter.h  core.pri  core.qrc  dictionary.cpp  dictionary.h  html.cpp  index.cpp  index.h  inverted_list.cpp  inverted_list.h  local_inverted_list.cpp  local_inverted_list.h  main.cpp  search_core.cpp  search_core.h  webpage.cpp  webpage.h  word_segmenter.cpp  word_segmenter.h
core/include/: dictionary.h  search_core.h  searchcore.h  stable.h
core/include/handysearch/: core.h
core/libs/: CMakeLists.txt  cppjieba.cmake
core/src/: bloom_filter.cpp  core.cpp  dictionary.cpp  qjieba.hpp  search_core.cpp  searchcore.cpp  word_segmenter.cpp
core/tests/: CMakeLists.txt  test_searchcore.cpp
forms/: LoadUI.ui  handy_search.ui  load_ui.ui
include/: InvertedList.h  LoadUI.h  LocalInvertedList.h
include/handysearch/: dictionary.h  handysearch.h  segmenter.h
libraries/catch/: CMakeLists.txt
scraper/scraper/: exporters.py  pipelines.py  settings.py
scraper/scraper/spiders/: simple_spider.py  wikispider.py
source/: BloomFilter.cpp  Dictionary.cpp  HandySearch.cpp  Html.cpp  LoadUI.cpp  WordSegmenter.cpp
src/: dictionary.cpp  handysearch.cpp  segmenter.cpp
tests/: CMakeLists.txt  sample_dictionary.txt  test.sqlite  test_dictionary.cpp  test_handysearch.cpp  test_segmenter.cpp  testcore.cpp  tests.pro  tests.qrc
ui/: handy_search.cpp  handy_search.h  load_ui.cpp  load_ui.h  load_ui.h.autosave
